# scan-unused

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml
src/scan_unused/: cli.py  core.py  utils.py
src/scan_unused/templates/: base.html  example.html
tests/: test_benchmark.py  test_main.py
